# pozk-ludo

./: .gitignore  Dockerfile  README.md
prover/: Cargo.toml
prover/src/: input.rs  main.rs
verifier/: package.json
verifier/contracts/: LudoGameVerifier.sol
verifier/scripts/: deploy.js  mock-task.js
verifier/test/: verifier.js
