[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "=0.4.3"
num-traits = "=0.2.15"
ethabi = "18.0"
hex = "0.4"
anyhow = "1.0.79"
reqwest = "0.12"
tokio = { version = "1.39", features = ["macros", "full"] }
rand_core = { version ="0.6", features = ["getrandom"] }
rand_chacha = "0.3"
ark-groth16  = "0.5"
ark-snark  = "0.5"
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5" 
ark-serialize = { version = "0.5", features = ["derive"] }
ludo-ai-game = {path = "../../materials/ludo"}
